# H-FCN

./: .gitignore  README.md
Python_scripts/: HFCN_inference.py  HFCN_train.py  convert_model_26336_params.py  create_database.py
Python_scripts/trained_model/: hfcn_trained.hdf5  hfcn_trained.pb
libvpx/: .cproject  CMakeLists.txt  README  vpxdec.c  vpxdec.h
libvpx/vp9/: vp9_cx_iface.c
libvpx/vp9/decoder/: vp9_decodeframe.c
libvpx/vp9/encoder/: vp9_bitstream.c  vp9_encodeframe.c
