cmake_minimum_required(VERSION 3.12)
project(libvpx_Netflix)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(build)
include_directories(test)
include_directories(third_party/googletest/src/include)
include_directories(third_party/googletest/src/include/gtest)
include_directories(third_party/libwebm/common)
include_directories(third_party/libwebm/mkvmuxer)
include_directories(third_party/libwebm/mkvparser)
include_directories(third_party/libyuv/include)
include_directories(third_party/libyuv/include/libyuv)
include_directories(vp8/common)
include_directories(vp8/common/mips/msa)
include_directories(vp8/common/x86)
include_directories(vp8/decoder)
include_directories(vp8/encoder)
include_directories(vp9)
include_directories(vp9/common)
include_directories(vp9/decoder)
include_directories(vp9/encoder)
include_directories(vp9/encoder/mips/msa)
include_directories(vpx)
include_directories(vpx/internal)
include_directories(vpx_dsp)
include_directories(vpx_dsp/arm)
include_directories(vpx_dsp/mips)
include_directories(vpx_dsp/x86)
include_directories(vpx_mem)
include_directories(vpx_mem/include)
include_directories(vpx_ports)
include_directories(vpx_scale)
include_directories(vpx_util)

add_executable(libvpx_Netflix
        build/vpx_config.c
        build/vpx_config.h
        examples/decode_to_md5.c
        examples/decode_with_drops.c
        examples/postproc.c
        examples/resize_util.c
        examples/set_maps.c
        examples/simple_decoder.c
        examples/simple_encoder.c
        examples/twopass_encoder.c
        examples/vp8_multi_resolution_encoder.c
        examples/vp8cx_set_ref.c
        examples/vp9_lossless_encoder.c
        examples/vp9_spatial_svc_encoder.c
        examples/vp9cx_set_ref.c
        examples/vpx_temporal_svc_encoder.c
        test/acm_random.h
        test/active_map_refresh_test.cc
        test/active_map_test.cc
        test/add_noise_test.cc
        test/alt_ref_aq_segment_test.cc
        test/altref_test.cc
        test/aq_segment_test.cc
        test/avg_test.cc
        test/blockiness_test.cc
        test/borders_test.cc
        test/byte_alignment_test.cc
        test/clear_system_state.h
        test/codec_factory.h
        test/config_test.cc
        test/consistency_test.cc
        test/convolve_test.cc
        test/cpu_speed_test.cc
        test/cq_test.cc
        test/datarate_test.cc
        test/dct16x16_test.cc
        test/dct32x32_test.cc
        test/decode_api_test.cc
        test/decode_perf_test.cc
        test/decode_test_driver.cc
        test/decode_test_driver.h
        test/encode_api_test.cc
        test/encode_perf_test.cc
        test/encode_test_driver.cc
        test/encode_test_driver.h
        test/error_resilience_test.cc
        test/external_frame_buffer_test.cc
        test/fdct4x4_test.cc
        test/fdct8x8_test.cc
        test/frame_size_tests.cc
        test/hadamard_test.cc
        test/i420_video_source.h
        test/idct8x8_test.cc
        test/idct_test.cc
        test/invalid_file_test.cc
        test/ivf_video_source.h
        test/keyframe_test.cc
        test/level_test.cc
        test/lpf_test.cc
        test/md5_helper.h
        test/minmax_test.cc
        test/partial_idct_test.cc
        test/pp_filter_test.cc
        test/predict_test.cc
        test/quantize_test.cc
        test/realtime_test.cc
        test/register_state_check.h
        test/resize_test.cc
        test/sad_test.cc
        test/set_roi.cc
        test/sum_squares_test.cc
        test/superframe_test.cc
        test/svc_test.cc
        test/test_intra_pred_speed.cc
        test/test_libvpx.cc
        test/test_vector_test.cc
        test/test_vectors.cc
        test/test_vectors.h
        test/tile_independence_test.cc
        test/user_priv_test.cc
        test/util.h
        test/variance_test.cc
        test/video_source.h
        test/vp8_boolcoder_test.cc
        test/vp8_decrypt_test.cc
        test/vp8_denoiser_sse2_test.cc
        test/vp8_fdct4x4_test.cc
        test/vp8_fragments_test.cc
        test/vp9_arf_freq_test.cc
        test/vp9_boolcoder_test.cc
        test/vp9_decrypt_test.cc
        test/vp9_denoiser_sse2_test.cc
        test/vp9_encoder_parms_get_to_decoder.cc
        test/vp9_end_to_end_test.cc
        test/vp9_error_block_test.cc
        test/vp9_ethread_test.cc
        test/vp9_frame_parallel_test.cc
        test/vp9_intrapred_test.cc
        test/vp9_lossless_test.cc
        test/vp9_quantize_test.cc
        test/vp9_skip_loopfilter_test.cc
        test/vp9_subtract_test.cc
        test/vp9_thread_test.cc
        test/vpx_scale_test.cc
        test/webm_video_source.h
        test/y4m_test.cc
        test/y4m_video_source.h
        test/yuv_video_source.h
        third_party/googletest/src/include/gtest/gtest.h
        third_party/googletest/src/src/gtest-all.cc
        third_party/googletest/src/src/gtest_main.cc
        third_party/libwebm/common/file_util.cc
        third_party/libwebm/common/file_util.h
        third_party/libwebm/common/hdr_util.cc
        third_party/libwebm/common/hdr_util.h
        third_party/libwebm/common/webmids.h
        third_party/libwebm/mkvmuxer/mkvmuxer.cc
        third_party/libwebm/mkvmuxer/mkvmuxer.h
        third_party/libwebm/mkvmuxer/mkvmuxertypes.h
        third_party/libwebm/mkvmuxer/mkvmuxerutil.cc
        third_party/libwebm/mkvmuxer/mkvmuxerutil.h
        third_party/libwebm/mkvmuxer/mkvwriter.cc
        third_party/libwebm/mkvmuxer/mkvwriter.h
        third_party/libwebm/mkvparser/mkvparser.cc
        third_party/libwebm/mkvparser/mkvparser.h
        third_party/libwebm/mkvparser/mkvreader.cc
        third_party/libwebm/mkvparser/mkvreader.h
        third_party/libyuv/include/libyuv/basic_types.h
        third_party/libyuv/include/libyuv/compare.h
        third_party/libyuv/include/libyuv/convert.h
        third_party/libyuv/include/libyuv/convert_argb.h
        third_party/libyuv/include/libyuv/convert_from.h
        third_party/libyuv/include/libyuv/convert_from_argb.h
        third_party/libyuv/include/libyuv/cpu_id.h
        third_party/libyuv/include/libyuv/mjpeg_decoder.h
        third_party/libyuv/include/libyuv/planar_functions.h
        third_party/libyuv/include/libyuv/rotate.h
        third_party/libyuv/include/libyuv/rotate_argb.h
        third_party/libyuv/include/libyuv/rotate_row.h
        third_party/libyuv/include/libyuv/row.h
        third_party/libyuv/include/libyuv/scale.h
        third_party/libyuv/include/libyuv/scale_argb.h
        third_party/libyuv/include/libyuv/scale_row.h
        third_party/libyuv/include/libyuv/version.h
        third_party/libyuv/include/libyuv/video_common.h
        third_party/libyuv/source/compare.cc
        third_party/libyuv/source/compare_common.cc
        third_party/libyuv/source/compare_gcc.cc
        third_party/libyuv/source/compare_neon.cc
        third_party/libyuv/source/compare_neon64.cc
        third_party/libyuv/source/compare_win.cc
        third_party/libyuv/source/convert.cc
        third_party/libyuv/source/convert_argb.cc
        third_party/libyuv/source/convert_from.cc
        third_party/libyuv/source/convert_from_argb.cc
        third_party/libyuv/source/convert_jpeg.cc
        third_party/libyuv/source/convert_to_argb.cc
        third_party/libyuv/source/convert_to_i420.cc
        third_party/libyuv/source/cpu_id.cc
        third_party/libyuv/source/mjpeg_decoder.cc
        third_party/libyuv/source/mjpeg_validate.cc
        third_party/libyuv/source/planar_functions.cc
        third_party/libyuv/source/rotate.cc
        third_party/libyuv/source/rotate_any.cc
        third_party/libyuv/source/rotate_argb.cc
        third_party/libyuv/source/rotate_common.cc
        third_party/libyuv/source/rotate_gcc.cc
        third_party/libyuv/source/rotate_mips.cc
        third_party/libyuv/source/rotate_neon.cc
        third_party/libyuv/source/rotate_neon64.cc
        third_party/libyuv/source/rotate_win.cc
        third_party/libyuv/source/row_any.cc
        third_party/libyuv/source/row_common.cc
        third_party/libyuv/source/row_gcc.cc
        third_party/libyuv/source/row_mips.cc
        third_party/libyuv/source/row_neon.cc
        third_party/libyuv/source/row_neon64.cc
        third_party/libyuv/source/row_win.cc
        third_party/libyuv/source/scale.cc
        third_party/libyuv/source/scale_any.cc
        third_party/libyuv/source/scale_argb.cc
        third_party/libyuv/source/scale_common.cc
        third_party/libyuv/source/scale_gcc.cc
        third_party/libyuv/source/scale_mips.cc
        third_party/libyuv/source/scale_neon.cc
        third_party/libyuv/source/scale_neon64.cc
        third_party/libyuv/source/scale_win.cc
        third_party/libyuv/source/video_common.cc
        tools/tiny_ssim.c
        vp8/common/arm/neon/bilinearpredict_neon.c
        vp8/common/arm/neon/copymem_neon.c
        vp8/common/arm/neon/dc_only_idct_add_neon.c
        vp8/common/arm/neon/dequant_idct_neon.c
        vp8/common/arm/neon/dequantizeb_neon.c
        vp8/common/arm/neon/idct_blk_neon.c
        vp8/common/arm/neon/idct_dequant_0_2x_neon.c
        vp8/common/arm/neon/idct_dequant_full_2x_neon.c
        vp8/common/arm/neon/iwalsh_neon.c
        vp8/common/arm/neon/loopfiltersimplehorizontaledge_neon.c
        vp8/common/arm/neon/loopfiltersimpleverticaledge_neon.c
        vp8/common/arm/neon/mbloopfilter_neon.c
        vp8/common/arm/neon/shortidct4x4llm_neon.c
        vp8/common/arm/neon/sixtappredict_neon.c
        vp8/common/arm/neon/vp8_loopfilter_neon.c
        vp8/common/arm/loopfilter_arm.c
        vp8/common/generic/systemdependent.c
        vp8/common/mips/dspr2/dequantize_dspr2.c
        vp8/common/mips/dspr2/filter_dspr2.c
        vp8/common/mips/dspr2/idct_blk_dspr2.c
        vp8/common/mips/dspr2/idctllm_dspr2.c
        vp8/common/mips/dspr2/reconinter_dspr2.c
        vp8/common/mips/dspr2/vp8_loopfilter_filters_dspr2.c
        vp8/common/mips/msa/bilinear_filter_msa.c
        vp8/common/mips/msa/copymem_msa.c
        vp8/common/mips/msa/idct_msa.c
        vp8/common/mips/msa/loopfilter_filters_msa.c
        vp8/common/mips/msa/mfqe_msa.c
        vp8/common/mips/msa/sixtap_filter_msa.c
        vp8/common/mips/msa/vp8_macros_msa.h
        vp8/common/x86/filter_x86.c
        vp8/common/x86/filter_x86.h
        vp8/common/x86/idct_blk_mmx.c
        vp8/common/x86/idct_blk_sse2.c
        vp8/common/x86/loopfilter_x86.c
        vp8/common/x86/vp8_asm_stubs.c
        vp8/common/alloccommon.c
        vp8/common/alloccommon.h
        vp8/common/blockd.c
        vp8/common/blockd.h
        vp8/common/coefupdateprobs.h
        vp8/common/common.h
        vp8/common/context.c
        vp8/common/copy_c.c
        vp8/common/debugmodes.c
        vp8/common/default_coef_probs.h
        vp8/common/dequantize.c
        vp8/common/entropy.c
        vp8/common/entropy.h
        vp8/common/entropymode.c
        vp8/common/entropymode.h
        vp8/common/entropymv.c
        vp8/common/entropymv.h
        vp8/common/extend.c
        vp8/common/extend.h
        vp8/common/filter.c
        vp8/common/filter.h
        vp8/common/findnearmv.c
        vp8/common/findnearmv.h
        vp8/common/header.h
        vp8/common/idct_blk.c
        vp8/common/idctllm.c
        vp8/common/invtrans.h
        vp8/common/loopfilter.h
        vp8/common/loopfilter_filters.c
        vp8/common/mbpitch.c
        vp8/common/mfqe.c
        vp8/common/modecont.c
        vp8/common/modecont.h
        vp8/common/mv.h
        vp8/common/onyx.h
        vp8/common/onyxc_int.h
        vp8/common/onyxd.h
        vp8/common/postproc.c
        vp8/common/postproc.h
        vp8/common/ppflags.h
        vp8/common/quant_common.c
        vp8/common/quant_common.h
        vp8/common/reconinter.c
        vp8/common/reconinter.h
        vp8/common/reconintra.c
        vp8/common/reconintra.h
        vp8/common/reconintra4x4.c
        vp8/common/reconintra4x4.h
        vp8/common/rtcd.c
        vp8/common/setupintrarecon.c
        vp8/common/setupintrarecon.h
        vp8/common/swapyv12buffer.c
        vp8/common/swapyv12buffer.h
        vp8/common/systemdependent.h
        vp8/common/threading.h
        vp8/common/treecoder.c
        vp8/common/treecoder.h
        vp8/common/vp8_entropymodedata.h
        vp8/common/vp8_loopfilter.c
        vp8/decoder/dboolhuff.c
        vp8/decoder/dboolhuff.h
        vp8/decoder/decodeframe.c
        vp8/decoder/decodemv.c
        vp8/decoder/decodemv.h
        vp8/decoder/decoderthreading.h
        vp8/decoder/detokenize.c
        vp8/decoder/detokenize.h
        vp8/decoder/ec_types.h
        vp8/decoder/error_concealment.c
        vp8/decoder/error_concealment.h
        vp8/decoder/onyxd_if.c
        vp8/decoder/onyxd_int.h
        vp8/decoder/threading.c
        vp8/decoder/treereader.h
        vp8/encoder/arm/neon/denoising_neon.c
        vp8/encoder/arm/neon/fastquantizeb_neon.c
        vp8/encoder/arm/neon/shortfdct_neon.c
        vp8/encoder/arm/neon/vp8_shortwalsh4x4_neon.c
        vp8/encoder/mips/msa/dct_msa.c
        vp8/encoder/mips/msa/denoising_msa.c
        vp8/encoder/mips/msa/encodeopt_msa.c
        vp8/encoder/mips/msa/quantize_msa.c
        vp8/encoder/mips/msa/temporal_filter_msa.c
        vp8/encoder/x86/denoising_sse2.c
        vp8/encoder/x86/quantize_sse4.c
        vp8/encoder/x86/quantize_ssse3.c
        vp8/encoder/x86/vp8_enc_stubs_mmx.c
        vp8/encoder/x86/vp8_enc_stubs_sse2.c
        vp8/encoder/x86/vp8_quantize_sse2.c
        vp8/encoder/bitstream.c
        vp8/encoder/bitstream.h
        vp8/encoder/block.h
        vp8/encoder/boolhuff.c
        vp8/encoder/boolhuff.h
        vp8/encoder/dct.c
        vp8/encoder/dct_value_cost.h
        vp8/encoder/dct_value_tokens.h
        vp8/encoder/defaultcoefcounts.h
        vp8/encoder/denoising.c
        vp8/encoder/denoising.h
        vp8/encoder/encodeframe.c
        vp8/encoder/encodeframe.h
        vp8/encoder/encodeintra.c
        vp8/encoder/encodeintra.h
        vp8/encoder/encodemb.c
        vp8/encoder/encodemb.h
        vp8/encoder/encodemv.c
        vp8/encoder/encodemv.h
        vp8/encoder/ethreading.c
        vp8/encoder/firstpass.c
        vp8/encoder/firstpass.h
        vp8/encoder/lookahead.c
        vp8/encoder/lookahead.h
        vp8/encoder/mcomp.c
        vp8/encoder/mcomp.h
        vp8/encoder/modecosts.c
        vp8/encoder/modecosts.h
        vp8/encoder/mr_dissim.c
        vp8/encoder/mr_dissim.h
        vp8/encoder/onyx_if.c
        vp8/encoder/onyx_int.h
        vp8/encoder/pickinter.c
        vp8/encoder/pickinter.h
        vp8/encoder/picklpf.c
        vp8/encoder/quantize.h
        vp8/encoder/ratectrl.c
        vp8/encoder/ratectrl.h
        vp8/encoder/rdopt.c
        vp8/encoder/rdopt.h
        vp8/encoder/segmentation.c
        vp8/encoder/segmentation.h
        vp8/encoder/temporal_filter.c
        vp8/encoder/tokenize.c
        vp8/encoder/tokenize.h
        vp8/encoder/treewriter.c
        vp8/encoder/treewriter.h
        vp8/encoder/vp8_quantize.c
        vp8/vp8_cx_iface.c
        vp8/vp8_dx_iface.c
        vp9/common/arm/neon/vp9_iht4x4_add_neon.c
        vp9/common/arm/neon/vp9_iht8x8_add_neon.c
        vp9/common/mips/dspr2/vp9_itrans16_dspr2.c
        vp9/common/mips/dspr2/vp9_itrans4_dspr2.c
        vp9/common/mips/dspr2/vp9_itrans8_dspr2.c
        vp9/common/mips/msa/vp9_idct16x16_msa.c
        vp9/common/mips/msa/vp9_idct4x4_msa.c
        vp9/common/mips/msa/vp9_idct8x8_msa.c
        vp9/common/mips/msa/vp9_mfqe_msa.c
        vp9/common/x86/vp9_idct_intrin_sse2.c
        vp9/common/vp9_alloccommon.c
        vp9/common/vp9_alloccommon.h
        vp9/common/vp9_blockd.c
        vp9/common/vp9_blockd.h
        vp9/common/vp9_common.h
        vp9/common/vp9_common_data.c
        vp9/common/vp9_common_data.h
        vp9/common/vp9_debugmodes.c
        vp9/common/vp9_entropy.c
        vp9/common/vp9_entropy.h
        vp9/common/vp9_entropymode.c
        vp9/common/vp9_entropymode.h
        vp9/common/vp9_entropymv.c
        vp9/common/vp9_entropymv.h
        vp9/common/vp9_enums.h
        vp9/common/vp9_filter.c
        vp9/common/vp9_filter.h
        vp9/common/vp9_frame_buffers.c
        vp9/common/vp9_frame_buffers.h
        vp9/common/vp9_idct.c
        vp9/common/vp9_idct.h
        vp9/common/vp9_loopfilter.c
        vp9/common/vp9_loopfilter.h
        vp9/common/vp9_mfqe.c
        vp9/common/vp9_mfqe.h
        vp9/common/vp9_mv.h
        vp9/common/vp9_mvref_common.c
        vp9/common/vp9_mvref_common.h
        vp9/common/vp9_onyxc_int.h
        vp9/common/vp9_postproc.c
        vp9/common/vp9_postproc.h
        vp9/common/vp9_ppflags.h
        vp9/common/vp9_pred_common.c
        vp9/common/vp9_pred_common.h
        vp9/common/vp9_quant_common.c
        vp9/common/vp9_quant_common.h
        vp9/common/vp9_reconinter.c
        vp9/common/vp9_reconinter.h
        vp9/common/vp9_reconintra.c
        vp9/common/vp9_reconintra.h
        vp9/common/vp9_rtcd.c
        vp9/common/vp9_scale.c
        vp9/common/vp9_scale.h
        vp9/common/vp9_scan.c
        vp9/common/vp9_scan.h
        vp9/common/vp9_seg_common.c
        vp9/common/vp9_seg_common.h
        vp9/common/vp9_thread_common.c
        vp9/common/vp9_thread_common.h
        vp9/common/vp9_tile_common.c
        vp9/common/vp9_tile_common.h
        vp9/decoder/vp9_decodeframe.c
        vp9/decoder/vp9_decodeframe.h
        vp9/decoder/vp9_decodemv.c
        vp9/decoder/vp9_decodemv.h
        vp9/decoder/vp9_decoder.c
        vp9/decoder/vp9_decoder.h
        vp9/decoder/vp9_detokenize.c
        vp9/decoder/vp9_detokenize.h
        vp9/decoder/vp9_dsubexp.c
        vp9/decoder/vp9_dsubexp.h
        vp9/decoder/vp9_dthread.c
        vp9/decoder/vp9_dthread.h
        vp9/encoder/arm/neon/vp9_dct_neon.c
        vp9/encoder/arm/neon/vp9_error_neon.c
        vp9/encoder/arm/neon/vp9_quantize_neon.c
        vp9/encoder/mips/msa/vp9_error_msa.c
        vp9/encoder/mips/msa/vp9_fdct16x16_msa.c
        vp9/encoder/mips/msa/vp9_fdct4x4_msa.c
        vp9/encoder/mips/msa/vp9_fdct8x8_msa.c
        vp9/encoder/mips/msa/vp9_fdct_msa.h
        vp9/encoder/mips/msa/vp9_temporal_filter_msa.c
        vp9/encoder/x86/vp9_dct_intrin_sse2.c
        vp9/encoder/x86/vp9_dct_ssse3.c
        vp9/encoder/x86/vp9_denoiser_sse2.c
        vp9/encoder/x86/vp9_diamond_search_sad_avx.c
        vp9/encoder/x86/vp9_error_intrin_avx2.c
        vp9/encoder/x86/vp9_frame_scale_ssse3.c
        vp9/encoder/x86/vp9_highbd_block_error_intrin_sse2.c
        vp9/encoder/x86/vp9_quantize_sse2.c
        vp9/encoder/vp9_alt_ref_aq.c
        vp9/encoder/vp9_alt_ref_aq.h
        vp9/encoder/vp9_aq_360.c
        vp9/encoder/vp9_aq_360.h
        vp9/encoder/vp9_aq_complexity.c
        vp9/encoder/vp9_aq_complexity.h
        vp9/encoder/vp9_aq_cyclicrefresh.c
        vp9/encoder/vp9_aq_cyclicrefresh.h
        vp9/encoder/vp9_aq_variance.c
        vp9/encoder/vp9_aq_variance.h
        vp9/encoder/vp9_bitstream.c
        vp9/encoder/vp9_bitstream.h
        vp9/encoder/vp9_block.h
        vp9/encoder/vp9_blockiness.c
        vp9/encoder/vp9_context_tree.c
        vp9/encoder/vp9_context_tree.h
        vp9/encoder/vp9_cost.c
        vp9/encoder/vp9_cost.h
        vp9/encoder/vp9_dct.c
        vp9/encoder/vp9_denoiser.c
        vp9/encoder/vp9_denoiser.h
        vp9/encoder/vp9_encodeframe.c
        vp9/encoder/vp9_encodeframe.h
        vp9/encoder/vp9_encodemb.c
        vp9/encoder/vp9_encodemb.h
        vp9/encoder/vp9_encodemv.c
        vp9/encoder/vp9_encodemv.h
        vp9/encoder/vp9_encoder.c
        vp9/encoder/vp9_encoder.h
        vp9/encoder/vp9_ethread.c
        vp9/encoder/vp9_ethread.h
        vp9/encoder/vp9_extend.c
        vp9/encoder/vp9_extend.h
        vp9/encoder/vp9_firstpass.c
        vp9/encoder/vp9_firstpass.h
        vp9/encoder/vp9_lookahead.c
        vp9/encoder/vp9_lookahead.h
        vp9/encoder/vp9_mbgraph.c
        vp9/encoder/vp9_mbgraph.h
        vp9/encoder/vp9_mcomp.c
        vp9/encoder/vp9_mcomp.h
        vp9/encoder/vp9_noise_estimate.c
        vp9/encoder/vp9_noise_estimate.h
        vp9/encoder/vp9_picklpf.c
        vp9/encoder/vp9_picklpf.h
        vp9/encoder/vp9_pickmode.c
        vp9/encoder/vp9_pickmode.h
        vp9/encoder/vp9_quantize.c
        vp9/encoder/vp9_quantize.h
        vp9/encoder/vp9_ratectrl.c
        vp9/encoder/vp9_ratectrl.h
        vp9/encoder/vp9_rd.c
        vp9/encoder/vp9_rd.h
        vp9/encoder/vp9_rdopt.c
        vp9/encoder/vp9_rdopt.h
        vp9/encoder/vp9_resize.c
        vp9/encoder/vp9_resize.h
        vp9/encoder/vp9_segmentation.c
        vp9/encoder/vp9_segmentation.h
        vp9/encoder/vp9_skin_detection.c
        vp9/encoder/vp9_skin_detection.h
        vp9/encoder/vp9_speed_features.c
        vp9/encoder/vp9_speed_features.h
        vp9/encoder/vp9_subexp.c
        vp9/encoder/vp9_subexp.h
        vp9/encoder/vp9_svc_layercontext.c
        vp9/encoder/vp9_svc_layercontext.h
        vp9/encoder/vp9_temporal_filter.c
        vp9/encoder/vp9_temporal_filter.h
        vp9/encoder/vp9_tokenize.c
        vp9/encoder/vp9_tokenize.h
        vp9/encoder/vp9_treewriter.c
        vp9/encoder/vp9_treewriter.h
        vp9/vp9_cx_iface.c
        vp9/vp9_dx_iface.c
        vp9/vp9_dx_iface.h
        vp9/vp9_iface_common.h
        vpx/internal/vpx_codec_internal.h
        vpx/src/svc_encodeframe.c
        vpx/src/vpx_codec.c
        vpx/src/vpx_decoder.c
        vpx/src/vpx_encoder.c
        vpx/src/vpx_image.c
        vpx/svc_context.h
        vpx/vp8.h
        vpx/vp8cx.h
        vpx/vp8dx.h
        vpx/vpx_codec.h
        vpx/vpx_decoder.h
        vpx/vpx_encoder.h
        vpx/vpx_frame_buffer.h
        vpx/vpx_image.h
        vpx/vpx_integer.h
        vpx_dsp/arm/avg_neon.c
        vpx_dsp/arm/fwd_txfm_neon.c
        vpx_dsp/arm/hadamard_neon.c
        vpx_dsp/arm/highbd_loopfilter_neon.c
        vpx_dsp/arm/highbd_vpx_convolve8_neon.c
        vpx_dsp/arm/highbd_vpx_convolve_avg_neon.c
        vpx_dsp/arm/highbd_vpx_convolve_copy_neon.c
        vpx_dsp/arm/highbd_vpx_convolve_neon.c
        vpx_dsp/arm/idct16x16_1_add_neon.c
        vpx_dsp/arm/idct16x16_add_neon.c
        vpx_dsp/arm/idct16x16_neon.c
        vpx_dsp/arm/idct32x32_1_add_neon.c
        vpx_dsp/arm/idct32x32_34_add_neon.c
        vpx_dsp/arm/idct32x32_add_neon.c
        vpx_dsp/arm/idct4x4_1_add_neon.c
        vpx_dsp/arm/idct4x4_add_neon.c
        vpx_dsp/arm/idct8x8_1_add_neon.c
        vpx_dsp/arm/idct8x8_add_neon.c
        vpx_dsp/arm/intrapred_neon.c
        vpx_dsp/arm/loopfilter_neon.c
        vpx_dsp/arm/loopfilter_vertical_4_dual_neon.c
        vpx_dsp/arm/sad4d_neon.c
        vpx_dsp/arm/sad_neon.c
        vpx_dsp/arm/subpel_variance_neon.c
        vpx_dsp/arm/subtract_neon.c
        vpx_dsp/arm/transpose_neon.h
        vpx_dsp/arm/variance_neon.c
        vpx_dsp/arm/vpx_convolve8_neon.c
        vpx_dsp/arm/vpx_convolve_avg_neon.c
        vpx_dsp/arm/vpx_convolve_copy_neon.c
        vpx_dsp/arm/vpx_convolve_neon.c
        vpx_dsp/mips/add_noise_msa.c
        vpx_dsp/mips/avg_msa.c
        vpx_dsp/mips/common_dspr2.c
        vpx_dsp/mips/common_dspr2.h
        vpx_dsp/mips/convolve2_avg_dspr2.c
        vpx_dsp/mips/convolve2_avg_horiz_dspr2.c
        vpx_dsp/mips/convolve2_dspr2.c
        vpx_dsp/mips/convolve2_horiz_dspr2.c
        vpx_dsp/mips/convolve2_vert_dspr2.c
        vpx_dsp/mips/convolve8_avg_dspr2.c
        vpx_dsp/mips/convolve8_avg_horiz_dspr2.c
        vpx_dsp/mips/convolve8_dspr2.c
        vpx_dsp/mips/convolve8_horiz_dspr2.c
        vpx_dsp/mips/convolve8_vert_dspr2.c
        vpx_dsp/mips/convolve_common_dspr2.h
        vpx_dsp/mips/deblock_msa.c
        vpx_dsp/mips/fwd_dct32x32_msa.c
        vpx_dsp/mips/fwd_txfm_msa.c
        vpx_dsp/mips/fwd_txfm_msa.h
        vpx_dsp/mips/idct16x16_msa.c
        vpx_dsp/mips/idct32x32_msa.c
        vpx_dsp/mips/idct4x4_msa.c
        vpx_dsp/mips/idct8x8_msa.c
        vpx_dsp/mips/intrapred16_dspr2.c
        vpx_dsp/mips/intrapred4_dspr2.c
        vpx_dsp/mips/intrapred8_dspr2.c
        vpx_dsp/mips/intrapred_msa.c
        vpx_dsp/mips/inv_txfm_dspr2.h
        vpx_dsp/mips/inv_txfm_msa.h
        vpx_dsp/mips/itrans16_dspr2.c
        vpx_dsp/mips/itrans32_cols_dspr2.c
        vpx_dsp/mips/itrans32_dspr2.c
        vpx_dsp/mips/itrans4_dspr2.c
        vpx_dsp/mips/itrans8_dspr2.c
        vpx_dsp/mips/loopfilter_16_msa.c
        vpx_dsp/mips/loopfilter_4_msa.c
        vpx_dsp/mips/loopfilter_8_msa.c
        vpx_dsp/mips/loopfilter_filters_dspr2.c
        vpx_dsp/mips/loopfilter_filters_dspr2.h
        vpx_dsp/mips/loopfilter_macros_dspr2.h
        vpx_dsp/mips/loopfilter_masks_dspr2.h
        vpx_dsp/mips/loopfilter_mb_dspr2.c
        vpx_dsp/mips/loopfilter_mb_horiz_dspr2.c
        vpx_dsp/mips/loopfilter_mb_vert_dspr2.c
        vpx_dsp/mips/loopfilter_msa.h
        vpx_dsp/mips/macros_msa.h
        vpx_dsp/mips/sad_msa.c
        vpx_dsp/mips/sub_pixel_variance_msa.c
        vpx_dsp/mips/subtract_msa.c
        vpx_dsp/mips/txfm_macros_msa.h
        vpx_dsp/mips/variance_msa.c
        vpx_dsp/mips/vpx_convolve8_avg_horiz_msa.c
        vpx_dsp/mips/vpx_convolve8_avg_msa.c
        vpx_dsp/mips/vpx_convolve8_avg_vert_msa.c
        vpx_dsp/mips/vpx_convolve8_horiz_msa.c
        vpx_dsp/mips/vpx_convolve8_msa.c
        vpx_dsp/mips/vpx_convolve8_vert_msa.c
        vpx_dsp/mips/vpx_convolve_avg_msa.c
        vpx_dsp/mips/vpx_convolve_copy_msa.c
        vpx_dsp/mips/vpx_convolve_msa.h
        vpx_dsp/x86/avg_intrin_sse2.c
        vpx_dsp/x86/convolve.h
        vpx_dsp/x86/fwd_dct32x32_impl_avx2.h
        vpx_dsp/x86/fwd_dct32x32_impl_sse2.h
        vpx_dsp/x86/fwd_txfm_avx2.c
        vpx_dsp/x86/fwd_txfm_impl_sse2.h
        vpx_dsp/x86/fwd_txfm_sse2.c
        vpx_dsp/x86/fwd_txfm_sse2.h
        vpx_dsp/x86/highbd_loopfilter_sse2.c
        vpx_dsp/x86/highbd_quantize_intrin_sse2.c
        vpx_dsp/x86/highbd_variance_sse2.c
        vpx_dsp/x86/inv_txfm_sse2.c
        vpx_dsp/x86/inv_txfm_sse2.h
        vpx_dsp/x86/loopfilter_avx2.c
        vpx_dsp/x86/loopfilter_sse2.c
        vpx_dsp/x86/quantize_sse2.c
        vpx_dsp/x86/sad4d_avx2.c
        vpx_dsp/x86/sad_avx2.c
        vpx_dsp/x86/sum_squares_sse2.c
        vpx_dsp/x86/txfm_common_sse2.h
        vpx_dsp/x86/variance_avx2.c
        vpx_dsp/x86/variance_impl_avx2.c
        vpx_dsp/x86/variance_sse2.c
        vpx_dsp/x86/vpx_asm_stubs.c
        vpx_dsp/x86/vpx_subpixel_8t_intrin_avx2.c
        vpx_dsp/x86/vpx_subpixel_8t_intrin_ssse3.c
        vpx_dsp/add_noise.c
        vpx_dsp/avg.c
        vpx_dsp/bitreader.c
        vpx_dsp/bitreader.h
        vpx_dsp/bitreader_buffer.c
        vpx_dsp/bitreader_buffer.h
        vpx_dsp/bitwriter.c
        vpx_dsp/bitwriter.h
        vpx_dsp/bitwriter_buffer.c
        vpx_dsp/bitwriter_buffer.h
        vpx_dsp/deblock.c
        vpx_dsp/fastssim.c
        vpx_dsp/fwd_txfm.c
        vpx_dsp/fwd_txfm.h
        vpx_dsp/intrapred.c
        vpx_dsp/inv_txfm.c
        vpx_dsp/inv_txfm.h
        vpx_dsp/loopfilter.c
        vpx_dsp/postproc.h
        vpx_dsp/prob.c
        vpx_dsp/prob.h
        vpx_dsp/psnr.c
        vpx_dsp/psnr.h
        vpx_dsp/psnrhvs.c
        vpx_dsp/quantize.c
        vpx_dsp/quantize.h
        vpx_dsp/sad.c
        vpx_dsp/ssim.c
        vpx_dsp/ssim.h
        vpx_dsp/subtract.c
        vpx_dsp/sum_squares.c
        vpx_dsp/txfm_common.h
        vpx_dsp/variance.c
        vpx_dsp/variance.h
        vpx_dsp/vpx_convolve.c
        vpx_dsp/vpx_convolve.h
        vpx_dsp/vpx_dsp_common.h
        vpx_dsp/vpx_dsp_rtcd.c
        vpx_dsp/vpx_filter.h
        vpx_mem/include/vpx_mem_intrnl.h
        vpx_mem/vpx_mem.c
        vpx_mem/vpx_mem.h
        vpx_ports/arm.h
        vpx_ports/arm_cpudetect.c
        vpx_ports/bitops.h
        vpx_ports/config.h
        vpx_ports/emmintrin_compat.h
        vpx_ports/mem.h
        vpx_ports/mem_ops.h
        vpx_ports/mem_ops_aligned.h
        vpx_ports/msvc.h
        vpx_ports/system_state.h
        vpx_ports/vpx_once.h
        vpx_ports/vpx_timer.h
        vpx_ports/x86.h
        vpx_scale/generic/gen_scalers.c
        vpx_scale/generic/vpx_scale.c
        vpx_scale/generic/yv12config.c
        vpx_scale/generic/yv12extend.c
        vpx_scale/mips/dspr2/yv12extend_dspr2.c
        vpx_scale/vpx_scale.h
        vpx_scale/vpx_scale_rtcd.c
        vpx_scale/yv12config.h
        vpx_util/endian_inl.h
        vpx_util/vpx_thread.c
        vpx_util/vpx_thread.h
        args.c
        args.h
        ivfdec.c
        ivfdec.h
        ivfenc.c
        ivfenc.h
        md5_utils.c
        md5_utils.h
        rate_hist.c
        rate_hist.h
        tools_common.c
        tools_common.h
        video_common.h
        video_reader.c
        video_reader.h
        video_writer.c
        video_writer.h
        vpxdec.c
        vpxdec.h
        vpxenc.c
        vpxenc.h
        vpxstats.c
        vpxstats.h
        warnings.c
        warnings.h
        webmdec.cc
        webmdec.h
        webmenc.cc
        webmenc.h
        y4menc.c
        y4menc.h
        y4minput.c
        y4minput.h)
